Version 1.0.20:
- New command tls_fingerprint to trust one particular TLS certificate.
- Change whitespace: Avoid tabs and whitespace at end of lines.
- Fix Mac OS X Keychain support to use POP3 instead of SMTP passwords.
- Update the documentation of keyring usage.
- Add the mpop-gnome-tool.py script to manage Gnome Keyring passwords for
  mpop. Thanks to Gaizka Villate and Emmanuel Bouthenot.
- Fix single quotes in man page.
- Add pt_BR translation, provided by Rudá Moura. Thanks!

Version 1.0.19:
- Properly handle NUL characters in the Common Name or Subject Alternative
  Name fields of certificates when using OpenSSL. This fixes the security
  problem described in <http://www.blackhat.com/presentations/bh-usa-09/
  MARLINSPIKE/BHUSA09-Marlinspike-DefeatSSL-PAPER1.pdf>.
- Properly mask minus characters in the man page to prevent groff from
  converting them to hyphens. Reported by Emmanuel Bouthenot.
- Handle network share names correctly when creating directories for UIDLS
  files on W32. Bug reported by Dan.
- Handle mail boxes larger than 2 GiB even on 32bit systems. Based on a patch
  by Renato Schmidt. Thanks!

Version 1.0.18:
- Make writing of UIDLS files more robust. Avoid invalid file contents when
  mpop is killed while writing the file.
- Use proper binary prefixes when handling sizes.
- Update gnulib to 2009-09-08. Add modules mkstemp and rename.
- Add support for delivery to MS Exchange pickup directories, based on a patch
  by Julien Larigaldie.
- Use fflush() before fsync(), to ensure that all data reaches the disk.
- Maildir delivery: check for zero-length hostname.

Version 1.0.17:
- Update gnulib to 2009-04-11.
- Update gnulib to 2009-03-07. Remove gnulib modules fseek/fseeko/lseek because
  they cause errors on MinGW: files opened with "r+" cannot be written to.
  Provide our own fseeko instead if it does not exist; see configure.ac.
- Improve test for non-existing UIDLS file.
- Fix an invalid memory access in pop3_retr().