@@ -27,9 +27,9 @@ usage instructions):
 - Additional authentication methods
   The built-in authentication code supports the USER/PASS, APOP, PLAIN, LOGIN,
   CRAM-MD5, and EXTERNAL mechanisms. When GNU SASL support is enabled, some or
-  all of the mechanisms USER/PASS, APOP, EXTERNAL, GSSAPI, DIGEST-MD5, CRAM-MD5,
-  PLAIN, LOGIN, and NTLM are available, depending on the compile-time options 
-  used for libgsasl. GNU SASL >= 0.2.4 is required.
+  all of the mechanisms USER/PASS, APOP, EXTERNAL, GSSAPI, SCRAM-SHA-1,
+  DIGEST-MD5, CRAM-MD5, PLAIN, LOGIN, and NTLM are available, depending on the
+  compile-time options used for libgsasl. GNU SASL >= 0.2.4 is required.
 - Support for Internationalized Domain Names (IDN)
   You need GNU Libidn if you want this.
 - Native language support (NLS)
