@@ -282,8 +282,8 @@ argument. The \fIkeychain item name\fP is \fBpop3://<hostname>\fP where
 \fB<hostname>\fP matches the mpop \fBhost\fP argument.
 .br
 Available methods are \fIuser\fP, \fIapop\fP, \fIplain\fP, \fIlogin\fP,
-\fIcram\-md5\fP, \fIdigest\-md5\fP, \fIgssapi\fP, \fIexternal\fP, \fIlogin\fP,
-and \fIntlm\fP.
+\fIcram\-md5\fP, \fIdigest\-md5\fP, \fIscram-sha-1\fP, \fIgssapi\fP,
+\fIexternal\fP, \fIlogin\fP, and \fIntlm\fP.
 Note that one or more of these methods may be unavailable due to lack of
 support in the underlying authentication library. Use the \fB\-\-version\fP
 option to find out which methods are supported.
@@ -297,7 +297,7 @@ If you don't choose the method yourself, mpop chooses the best secure method
 that the POP3 server supports. Secure means that your authentication data will
 not be sent in cleartext over the net. For TLS encrypted connections, every
 authentication method is secure in this sense. If TLS is not active, only
-gssapi, digest\-md5, and cram\-md5 are secure in this sense.
+gssapi, scram\-sha\-1, digest\-md5, and cram\-md5 are secure in this sense.
 .br
 The \fIexternal\fP method is special: the actual authentication happens outside
 of the SMTP protocol, typically by sending a TLS client certificate (see the
