@@ -63,20 +63,21 @@
 #define POP3_CAP_AUTH_PLAIN             (1 << 2)
 #define POP3_CAP_AUTH_CRAM_MD5          (1 << 3)
 #define POP3_CAP_AUTH_DIGEST_MD5        (1 << 4)
-#define POP3_CAP_AUTH_GSSAPI            (1 << 5)
-#define POP3_CAP_AUTH_EXTERNAL          (1 << 6)
-#define POP3_CAP_AUTH_LOGIN             (1 << 7)
-#define POP3_CAP_AUTH_NTLM              (1 << 8)
-#define POP3_CAP_CAPA                   (1 << 9)
-#define POP3_CAP_TOP                    (1 << 10)
-#define POP3_CAP_LOGIN_DELAY            (1 << 11)
-#define POP3_CAP_PIPELINING             (1 << 12)
-#define POP3_CAP_EXPIRE                 (1 << 13)
-#define POP3_CAP_UIDL                   (1 << 14)
-#define POP3_CAP_IMPLEMENTATION         (1 << 15)
-#define POP3_CAP_STLS                   (1 << 16)
-#define POP3_CAP_RESP_CODES             (1 << 17)
-#define POP3_CAP_AUTH_RESP_CODE         (1 << 18)
+#define POP3_CAP_AUTH_SCRAM_SHA_1       (1 << 5)
+#define POP3_CAP_AUTH_GSSAPI            (1 << 6)
+#define POP3_CAP_AUTH_EXTERNAL          (1 << 7)
+#define POP3_CAP_AUTH_LOGIN             (1 << 8)
+#define POP3_CAP_AUTH_NTLM              (1 << 9)
+#define POP3_CAP_CAPA                   (1 << 10)
+#define POP3_CAP_TOP                    (1 << 11)
+#define POP3_CAP_LOGIN_DELAY            (1 << 12)
+#define POP3_CAP_PIPELINING             (1 << 13)
+#define POP3_CAP_EXPIRE                 (1 << 14)
+#define POP3_CAP_UIDL                   (1 << 15)
+#define POP3_CAP_IMPLEMENTATION         (1 << 16)
+#define POP3_CAP_STLS                   (1 << 17)
+#define POP3_CAP_RESP_CODES             (1 << 18)
+#define POP3_CAP_AUTH_RESP_CODE         (1 << 19)
 
 /*
  * Buffer size for communication with the POP3 server. This restricts the length
