@@ -1,4 +1,5 @@
 Version 1.0.20:
+- Added support for authentication mechanism SCRAM-SHA-1 via GNU SASL.
 - The new command tls_fingerprint allows one to trust one particular TLS
   certificate, in case tls_trust_file cannot be used for some reason.
 - The new script mpop-gnome-tool.py manages Gnome Keyring passwords for mpop.
