@@ -1,4 +1,5 @@
 Version 1.0.20:
+- Support authentication mechanism SCRAM-SHA-1 via GNU SASL.
 - New command tls_fingerprint to trust one particular TLS certificate.
 - Change whitespace: Avoid tabs and whitespace at end of lines.
 - Fix Mac OS X Keychain support to use POP3 instead of SMTP passwords.
